--- a/app/views/replies/new.html.erb
+++ b/app/views/replies/new.html.erb
@@ -24,10 +24,12 @@
       <%= f.hidden_field :teacher_id, value: @current_teacher.id %>
       <%= f.hidden_field :student_id, value: @question.student.id %>
       <%= f.hidden_field :question_id, value: @question.id %>
+      <%= f.hidden_field :which, value: "teacher" %>
     <% else %>
-      <%= f.hidden_field :teacher_id, value: @current_student.id %>
-      <%= f.hidden_field :student_id, value: @question.student.id %>
+      <%= f.hidden_field :teacher_id, value: @question.teacher.id %>
+      <%= f.hidden_field :student_id, value: @current_student.id %>
       <%= f.hidden_field :question_id, value: @question.id %>
+      <%= f.hidden_field :which, value: "student" %>
     <% end %>
     
     <div style="text-align: center;">
