--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -89,6 +89,19 @@
   line-height: 28px;
 }
 
+.stu_card_content_question_circle {
+  font-family: serif;
+  font-size: 20px;
+  color: #f5f5f5;
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background: red;
+  text-align:center;
+  line-height: 28px;
+}
+
 .stu_card_content_text {
   bottom: 0;
   padding: 5px;
@@ -169,10 +182,40 @@
   border-bottom: 15px solid #0000AA;
 }
 
+.balloon_student {
+  position: relative;
+  margin: 1.5em 0;
+  padding: 20px;
+  color: black;
+  font-size: 16px;
+  background: linear-gradient(to right, #DCDCDC, #D3D3D3, #DCDCDC);
+  border-radius: 15px;
+  box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .4);
+}
+
+.balloon_student:before {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 15%;
+  margin-left: -15px;
+  border: 15px solid transparent;
+  border-bottom: 15px solid #D3D3D3;
+}
+
+
 .balloon_teacher p {
   margin: 0;
   padding: 0;
   font-size: 12px;
+  // font-weight: bold;
+}
+
+.balloon_student p {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 
