--- a/app/views/replies/new.html.erb
+++ b/app/views/replies/new.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div style="margin-top: 10px;">
     <% if @question.image.present? %>
-      <%= link_to "添付画像", @question.image.url, target: :blank %><br>
+      <%= link_to "画像を表示", @question.image.url, target: :blank %><br>
       <%= image_tag @question.image.url, size: "100x100" %>
     <% end %>
   </div>
