--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'share/header' %>
 
-<div style="padding-top: 76px;" class="teacher-edit-container">
+<div style="margin-top: 80px;" class="teacher-edit-container">
   <div class="form-wrapper">
     <div class="title">
       <h2>プロフィール編集</h2>
@@ -20,6 +20,10 @@
       <div class="form-group row">
         <%= f.label :school_of_choice, "志望校", class: "col-4 label" %>
         <%= f.text_field :school_of_choice, class: "form-control col-8" %>
+      </div>
+      <div class="form-group row">
+        <%= f.label :subject, "科目", class: "col-4 label" %>
+        <%= f.text_field :subject, class: "form-control col-8" %>
       </div>
       <div class="form-group row">
         <%= f.label :subject, "科目", class: "col-4 label" %>
