--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -26,8 +26,8 @@
         <%= f.text_field :subject, class: "form-control col-8" %>
       </div>
       <div class="form-group row">
-        <%= f.label :subject, "科目", class: "col-4 label" %>
-        <%= f.text_field :subject, class: "form-control col-8" %>
+        <%= f.label :mail, "メールアドレス", class: "col-4 label" %>
+        <%= f.text_field :mail, class: "form-control col-8" %>
       </div>
       <div class="form-group row">
         <%= f.label :image, "アイコン画像", class: "col-4 label" %>
