--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -49,7 +49,7 @@
       <% end %>
 
     <% e.replies.each_with_index do |r, i| %>
-    <div class="teacher_card" style="border-left:solid 1px; padding-right: 0px;padding-top: 10px;padding-bottom: 0px;">
+    <div class="teacher_card" style="border-left:solid 1px; padding-right: 0px;padding-top: 10px;padding-bottom: 0px;margin:0px">
       <div class="teacher_card_info">
         <div class="teacher_card_info_img">
         <% if r.which == "student" %>
