--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .news_field_background {
   background: #f5f5f5;
 }
@@ -17,40 +18,57 @@
 }
 
 .stu_card_info {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 20% 80%;
-  grid-template-rows: 25px 15px;
+  -ms-grid-columns: 20% 80%;
+      grid-template-columns: 20% 80%;
+  -ms-grid-rows: 25px 15px;
+      grid-template-rows: 25px 15px;
   margin-bottom: 30px;
 }
+
 .stu_card_info_img {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1 / 3;
   text-align: center;
 }
+
 .stu_card_info_img_self {
   border-radius: 50%;
   height: 50px;
   width: 50px;
-  object-fit: cover;  
+  -o-object-fit: cover;
+     object-fit: cover;
   border: solid 1px;
-  box-shadow: 0 0 8px gray;
+  -webkit-box-shadow: 0 0 8px gray;
+          box-shadow: 0 0 8px gray;
 }
 
 .good_stu_card_info_img_self {
   border-radius: 50%;
   height: 25px;
   width: 25px;
-  object-fit: cover;  
+  -o-object-fit: cover;
+     object-fit: cover;
   border: solid 1px;
-  box-shadow: 0 0 8px gray;
+  -webkit-box-shadow: 0 0 8px gray;
+          box-shadow: 0 0 8px gray;
 }
 
 .stu_card_info_name {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1 / 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
 }
 
-.stu_card_info_name  > h5 {
+.stu_card_info_name > h5 {
   font-size: 16px;
   margin: 4px 0px;
 }
@@ -61,9 +79,11 @@
   padding: 10px 20px;
   color: black;
   font-size: 14px;
+  background: -webkit-gradient(linear, left top, right top, from(#DCDCDC), color-stop(#D3D3D3), to(#DCDCDC));
   background: linear-gradient(to right, #DCDCDC, #D3D3D3, #DCDCDC);
   border-radius: 15px;
-  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, .3);
+  -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 .good_buttons {
@@ -75,39 +95,75 @@
   font-size: 20px;
 }
 
-.LikesIcon-fa-heart.heart{
+.LikesIcon-fa-heart.heart {
   /* heartAnimationアニメーションを200ミリ秒かけて実行する */
-  animation: heartAnimation .2s;
+  -webkit-animation: heartAnimation .2s;
+          animation: heartAnimation .2s;
   /* アイコン色を黒から赤へ変更する */
   color: #e2264d;
 }
 
-@keyframes heartAnimation {
+@-webkit-keyframes heartAnimation {
   0% {
-    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   10% {
-    transform: scale(0.7);
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
   }
   30% {
-    transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
   }
   50% {
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
   80% {
-    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
   }
   100% {
-    transform: scale(1.0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
-
+@keyframes heartAnimation {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  10% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  30% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  80% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
 
 .stu_card_info_time_ago {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
-  grid-column: 2 / 3;  
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
   font-size: 12px;
 }
 
@@ -116,10 +172,11 @@
   font-size: 15px;
 }
 
-
 .stu_card_content {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 10% 90%;
+  -ms-grid-columns: 10% 90%;
+      grid-template-columns: 10% 90%;
 }
 
 .stu_card_content_subject_circle {
@@ -131,7 +188,7 @@
   height: 28px;
   border-radius: 50%;
   background: #663333;
-  text-align:center;
+  text-align: center;
   line-height: 28px;
 }
 
@@ -144,7 +201,7 @@
   height: 28px;
   border-radius: 50%;
   background: red;
-  text-align:center;
+  text-align: center;
   line-height: 28px;
 }
 
@@ -153,18 +210,14 @@
   padding: 5px;
 }
 
-.stu_card_content_text_subject{
+.stu_card_content_text_subject {
   font-size: 15px;
   font-weight: bold;
 }
 
-
 .stu_card_content_time {
   text-align: center;
 }
-
-
-
 
 .teacher_card {
   margin: 10px 100px;
@@ -172,38 +225,57 @@
 }
 
 .teacher_card_info {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 20% 80%;
-  grid-template-rows: 25px 15px;
+  -ms-grid-columns: 20% 80%;
+      grid-template-columns: 20% 80%;
+  -ms-grid-rows: 25px 15px;
+      grid-template-rows: 25px 15px;
   margin-bottom: 30px;
 }
+
 .teacher_card_info_img {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1 / 3;
   text-align: center;
 }
+
 .teacher_card_info_img_self {
   border-radius: 50%;
   height: 50px;
   width: 50px;
-  object-fit: cover;  
+  -o-object-fit: cover;
+     object-fit: cover;
   border: solid 1px;
-  box-shadow: 0 0 8px gray;
+  -webkit-box-shadow: 0 0 8px gray;
+          box-shadow: 0 0 8px gray;
 }
 
 .teacher_card_info_name {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1 / 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
 }
 
-.teacher_card_info_name  > h5 {
+.teacher_card_info_name > h5 {
   font-size: 16px;
   margin: 4px 0px;
 }
 
 .teacher_card_info_time_ago {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2 / 3;
-  grid-column: 2 / 3;  
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
   font-size: 12px;
 }
 
@@ -215,7 +287,8 @@
   font-size: 16px;
   background: #0000AA;
   border-radius: 15px;
-  box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .4);
+  -webkit-box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .balloon_teacher:before {
@@ -234,9 +307,11 @@
   padding: 20px;
   color: black;
   font-size: 16px;
+  background: -webkit-gradient(linear, left top, right top, from(#DCDCDC), color-stop(#D3D3D3), to(#DCDCDC));
   background: linear-gradient(to right, #DCDCDC, #D3D3D3, #DCDCDC);
   border-radius: 15px;
-  box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .4);
+  -webkit-box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .balloon_student:before {
@@ -249,12 +324,10 @@
   border-bottom: 15px solid #D3D3D3;
 }
 
-
 .balloon_teacher p {
   margin: 0;
   padding: 0;
   font-size: 12px;
-  // font-weight: bold;
 }
 
 .balloon_student p {
@@ -264,14 +337,13 @@
   font-weight: bold;
 }
 
-
 .new_message_add {
   position: fixed;
   bottom: 0;
   right: 0;
   margin: 0 20px 30px 0;
   width: 75px;
-	height: 75px;
+  height: 75px;
   font-size: 40px;
   border-radius: 50px;
   background-color: #00008b;
@@ -286,7 +358,7 @@
   right: 0;
   margin: 0 20px 40px 0;
   width: 75px;
-	height: 75px;
+  height: 75px;
   font-size: 40px;
   border-radius: 50px;
   background-color: #00008b;
@@ -307,12 +379,11 @@
   .stu_card {
     margin: 0;
   }
-
   .question_card {
     margin: 0;
   }
-
   .teacher_card {
     margin: 0;
   }
 }
+/*# sourceMappingURL=index.css.map */
