--- a/app/assets/stylesheets/teacher_profile.css
+++ b/app/assets/stylesheets/teacher_profile.css
@@ -50,7 +50,7 @@
       grid-template-columns: 80% 20%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  background-color: black;
+  background-color: gray;
   padding: 10px 60px;
   color: white;
   font-family: 'arial';
