--- a/app/assets/stylesheets/teacher_profile.scss
+++ b/app/assets/stylesheets/teacher_profile.scss
@@ -48,7 +48,7 @@
   display: grid;
   grid-template-columns: 80% 20%;
   justify-content: space-around;
-  background-color: black;
+  background-color: gray;
   padding: 10px 60px;
   color: white;
   font-family: 'arial';
