--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -18,7 +18,7 @@
           <h5>
             <%= e.student.full_name %>君
             <% if @current_student.present? %>
-              <%= link_to "削除", "/destroy_q/#{e.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete %>
+              <%= link_to "削除", "/destroy_q/#{e.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete, data: { confirm: '削除しますか？' } %>
             <% end %>
           </h5>
         </div>
@@ -71,7 +71,7 @@
             <h5>
               <%=r.student.full_name %>
             <% if @current_student.present? %>
-              <%= link_to "削除", "/destroy_r/#{r.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete %>
+              <%= link_to "削除", "/destroy_r/#{r.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete, data: { confirm: '削除しますか？' } %>
             <% end %>
             </h5>
             
@@ -79,7 +79,7 @@
             <h5>
               <%=r.teacher.full_name %>
             <% if @current_teacher.present? %>
-              <%= link_to "削除", "/destroy_r/#{r.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete %>
+              <%= link_to "削除", "/destroy_r/#{r.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete, data: { confirm: '削除しますか？' }  %>
             <% end %>
             </h5>
           <% end %>
@@ -128,7 +128,7 @@
           <h5>
             <%= e.student.full_name %>君
             <%= link_to "編集", "/news_field/#{e.id}/edit", style: "color: tomato;margin-left: 40px;font-size:13px;" %>
-            <%= link_to "削除", "/destroy_lh/#{e.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete %>
+            <%= link_to "削除", "/destroy_lh/#{e.id}", style: "color: tomato;margin-left: 20px;font-size:13px;", method: :delete, data: { confirm: '削除しますか？' } %>
           </h5>
         <% else %>
           <h5><%= link_to e.student.full_name, "/each_student/#{e.student.id}", method: :get %></h5>
@@ -163,7 +163,7 @@
         <% if e.teacher.id == @current_teacher&.id %>
           <h5>
             <%= e.teacher.full_name %>先生
-            <%= link_to "削除", "/messages/#{e.id}", method: :delete, style: "color: tomato;margin-left: 40px;font-size:13px;" %>
+            <%= link_to "削除", "/messages/#{e.id}", method: :delete, style: "color: tomato;margin-left: 40px;font-size:13px;", data: { confirm: '削除しますか？' } %>
           </h5>
         <% else %>
           <h5><%= e.teacher.full_name %>先生</h5>
@@ -205,4 +205,7 @@
     </a>
     </div>
   <% end %>
+  <div class="pagenation">
+    <%= paginate @news %>
+  </div>
 </section>
