--- a/app/views/share/_student-history.erb
+++ b/app/views/share/_student-history.erb
@@ -29,15 +29,42 @@
     </div>
   </div>
 </div>
-<div class="good_buttons">
-  <span class="good_font">
-    <%= image_tag variable.student.teacher.image.url, class: "good_stu_card_info_img_self" %>
-  </span>
-  <span class="good_font" style="font-size: 10px;">
-   Fujita先生がいいねしました
-  </span>  
-  <i class="far fa-thumbs-up LikesIcon-fa-heart"></i>
-
-</div>
+<% if @current_teacher %>
+  <% if variable.like.present? %>
+    <div class="good_buttons on" learning-history-id="<%= variable.id %>" teacher-id="<%= variable.student.teacher.id %>">
+      <span class="good_font" style="display: inline;">
+        <%= image_tag variable.student.teacher.image.url, class: "good_stu_card_info_img_self" %>
+      </span>
+      <span class="good_font text" style="font-size: 10px; display: inline;">
+        <%= variable.liked_teacher.full_name %>先生がいいねしました
+      </span> 
+      <i class="fas fa-thumbs-up LikesIcon-fa-heart heart"></i>
+    </div>
+  <% else %>
+    <div class="good_buttons" learning-history-id="<%= variable.id %>" teacher-id="<%= variable.student.teacher.id %>">
+      <span class="good_font" style="display: none;">
+        <%= image_tag variable.student.teacher.image.url, class: "good_stu_card_info_img_self" %>
+      </span>
+      <span class="good_font text" style="font-size: 10px; display: none;">
+        Fujita先生がいいねしました
+      </span> 
+      <i class="far fa-thumbs-up LikesIcon-fa-heart"></i>
+    </div>
+  <% end %> 
+<% elsif @current_student %>
+  <div class="good_buttons iam_student" learning-history-id="<%= variable.id %>" teacher-id="<%= variable.student.teacher.id %>">
+  <% if variable.like.present? %>
+    <span class="good_font" style="display: inline;">
+      <%= image_tag variable.student.teacher.image.url, class: "good_stu_card_info_img_self" %>
+    </span>
+    <span class="good_font text" style="font-size: 10px; display: inline;">
+      <%= variable.liked_teacher.full_name %>先生がいいねしました
+    </span>
+    <i class="fas fa-thumbs-up LikesIcon-fa-heart heart"></i> 
+  <% else %>
+    <i class="far fa-thumbs-up LikesIcon-fa-heart"></i>
+  <% end %>
+  </div>
+<% end %>
 
   
