--- a/app/views/home/level.html.erb
+++ b/app/views/home/level.html.erb
@@ -7,22 +7,22 @@
   <div class="vocabulary-level">
     <ul>
       <li>基礎レベル</li>
-      <div style="padding: 10px 7%;">
-        <a href="/home/test">50単語</a><br>
-        <a href="/home/test">100単語</a><br>
-        <a href="/home/test">150単語</a>
-      </div>
+        <div class="words-list" style="padding: 10px 7%;">
+          <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">50単語</a></div>
+          <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">100単語</a></div>
+          <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">150単語</a></div>
+        </div>
       <li>標準レベル</li>
-      <div style="padding: 10px 7%;">
-        <a href="/home/test">50単語</a><br>
-        <a href="/home/test">100単語</a><br>
-        <a href="/home/test">150単語</a>
-      </div>
+        <div style="padding: 10px 7%;">
+          <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">50単語</a></div>
+          <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">100単語</a></div>
+          <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">150単語</a></div>
+        </div>
       <li>発展レベル</li>
       <div style="padding: 10px 7%;">
-        <a href="/home/test">50単語</a><br>
-        <a href="/home/test">100単語</a><br>
-        <a href="/home/test">150単語</a>
+        <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">50単語</a></div>
+        <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">100単語</a></div>
+        <div style="margin-bottom: 10px;"><a href="/home/test" style="color: black;">150単語</a></div>
       </div>
     </ul>
   </div>
